--- a/public/admin/assets/css/styles.css
+++ b/public/admin/assets/css/styles.css
@@ -1370,3 +1370,8 @@ div.dataTables_wrapper div.dataTables_filter {
     text-align: right;
     display: none;
 }
+
+/*sayan-*/
+.error{
+  color: red !important;
+}
