--- a/public/admin/assets/css/styles.css
+++ b/public/admin/assets/css/styles.css
@@ -1365,7 +1365,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
     text-decoration: none;
     background-color: #27344b;
 }
-
+/*jeet*/
 div.dataTables_wrapper div.dataTables_filter {
     text-align: right;
     display: none;
