--- a/public/admin/assets/css/styles.css
+++ b/public/admin/assets/css/styles.css
@@ -2019,3 +2019,65 @@ div.dataTables_wrapper div.dataTables_filter {
 .m-t-65{
   margin-top:65px !important;
 }
+.faq-sec .form-group .full-width{
+  width: 100%;
+  height: 180px;
+  border:solid 1px #ccc;
+  font-size: 15px;
+  color: #000;
+  padding:10px 20px;
+}
+.faq-sec .form-group .half-height{
+  width: 100%;
+  height: 100px;
+  border:solid 1px #ccc;
+  font-size: 15px;
+  color: #000;
+  padding:10px 20px;
+}
+.faq-sec .form-group .form-label{
+  display: block;
+  font-size: 20px;
+}
+.popupfaq-sec .form-group .full-width{
+  width: 100%;
+  height: 100px;
+  border:solid 1px #ccc;
+  font-size: 15px;
+  color: #000;
+  padding:10px 20px;
+}
+.popupfaq-sec .form-group .half-height{
+  width: 100%;
+  height: 70px;
+  border:solid 1px #ccc;
+  font-size: 15px;
+  color: #000;
+  padding:10px 20px;
+}
+.popupfaq-sec .form-group .form-label{
+  display: block;
+  font-size: 17px;
+}
+.close-bt{
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  z-index: 9;
+}
+.popupfaq-sec select.form-select{
+  height: 55px;
+  font-size: 17px;
+}
+.footer{
+    background: #fff;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 10px #ccc;
+}
+.footer p{
+  font-size: 15px;
+  color: #000;
+  }
