--- a/public/admin/assets/css/styles.css
+++ b/public/admin/assets/css/styles.css
@@ -1022,7 +1022,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   font-size: 14px;
   margin-top: 8px; 
 }
-.sidebar-heading a{
+.sidebar-heading a.menuclose{
   display: none;
 }
 .sb-sidenav-toggled .list-group .left-nav span {
@@ -1621,9 +1621,17 @@ table.dataTable{
 .flx-box-row .card{
   width: 49%;
   }
-
+.sb-sidenav-toggled .sidebar-heading a.logo {
+    display: none;
+}
 
 @media screen and (max-width: 912px) {
+  .sb-sidenav-toggled .sidebar-heading a.logo {
+    display: block;
+}
+  .sidebar-heading a.menuclose {
+    display: block;
+}
   .card00 {
       padding-top: 30px
   }
@@ -2211,4 +2219,16 @@ div.dataTables_wrapper div.dataTables_filter {
 }
 .col-1{
   float: left;  
+}
+.p-b10{
+  padding-bottom: 10px;
+}
+.terms h5{
+  font-size: 18px;
+  padding-bottom:10px;
+  margin-top:35px;
+}
+.terms p{
+  font-size: 15px;
+  line-height: 25px;
 }
